some edits to expt3; expt4

--- a/writing/_cogsci2016/habituals-cogsci2016.bib
+++ b/writing/_cogsci2016/habituals-cogsci2016.bib
@@ -149,6 +149,17 @@ year = {2008}
   publisher={Taylor \& Francis}
 }
 
+@inproceedings{Lassiter2013, 
+  author = {Lassiter, D. and Goodman, N. D.}, 
+  booktitle = {Semantics and {L}inguistic {T}heory {(SALT)} 23}, 
+  date-added = {2013-08-17 20:32:09 +0000}, 
+  date-modified = {2015-12-21 20:38:44 +0000}, 
+  pages = {587--610}, 
+  title = {Context, scale structure, and statistics in the interpretation of positive-form adjectives}, 
+  website = {http://journals.linguisticsociety.org/proceedings/index.php/SALT/article/view/2658/2404}, 
+  year = {2013} 
+}
+
 @article{Leslie2008,
   author = {Leslie, Sarah-Jane},
   journal = {Philosophical Review},
