--- a/writing/_cogsci2016/habituals-cogsci2016.tex
+++ b/writing/_cogsci2016/habituals-cogsci2016.tex
@@ -451,7 +451,7 @@ Habitual language is useful when it corresponds to future predictions of people'
 \subsubsection{Participants} 
 
 We recruited 120 participants from MTurk, using the same criterion as Expt.~2.
-None of the participants were used in Expt.~3.
+None of these participants were in Expt.~3.
 The experiment took 4 minutes on average on participants were compensated \$0.40 for their work.
 
 \subsubsection{Procedure and materials}
@@ -464,9 +464,15 @@ Participants were asked ``In the next \textsc{time window}, how many times do yo
 
 \section{Discussion}
 
-The model decides if the habitual is a useful way to describe the person's behavior, taking into the listener's beliefs about how common the action is, the likely frequency of action, and the basic conversational principles to be truthful and informative.
+We presented a computational model for communicating generalizations about events.
+The model decides if a habitual is a useful way to describe a person's behavior, taking into the listener's beliefs about how common the action is, the likely frequency of action, and the basic conversational principles to be truthful and informative.
+Though we validate this model using the speaker component $S_2$ for the evaluation of the felicity of habitual sentences, this model naturally extends to capture \emph{comprehension} of habitual language using the listener $L_1$ component.
 
-To our knowledge, this is the first empirical evidence addressing the truth conditions of habitual sentences.
+We use the domain of human behavior as it provides a well-defined domain of events with wide variability in frequency of action.
+
+
+To our knowledge, the experiments presented here are first empirical investigations into the truth conditions of habitual sentences.
+
 We are able to do this using a formal theory of the semantics and pragmatics of habitual language, which is almost identical to the our previous work on generic language.
 We adopt as the underlying degree scale the \emph{subjective frequency} with which a person does an action. 
 In Expt.~3, we showed that the notion of subjective frequency is tied to the future, \emph{predictive} frequency, which depends upon both past frequency and other conceptual factors.
